add new cv and projects

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Atheel_CV.pdf')"
           >
             Download CV
           </button>
@@ -289,28 +289,29 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/grocery.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">GroceryApp</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/mhd-atheel/groceryapp'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://drive.google.com/file/d/1w-JDh_LT9mMQgSMFPp9uJLhZgdJEKDIC/view?usp=sharing'"
               >
                 Live Demo
               </button>
             </div>
           </div>
-          <div class="details-container color-container">
+          
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-2.png"
@@ -357,7 +358,7 @@
                 Live Demo
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
